@@ -62,6 +62,8 @@
 	- fix: resurrect allfiles flag from rpm-2.5.x.
 	- fix: version compares compatible with epoch-less requires/conflicts.
 	- fix: rpm-2.5.1 had file list w/o leading / fix.
+	- portatbility fiddles (solaris).
+	- create binary rpm directory (e.g. .../%{_target_cpu}) on the fly.
 
 3.0.1 -> 3.0.2
 	- eliminate armv4 entries from rpmrc (Andrew E. Mileski).
